--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Wed Development and Design Company">
+    <meta name="keywords" content="Web Development, Web Design, Web Content Creation">
+    <title>ZoeVerse</title>
   </head>
   <body>
     <div id="root"></div>
