--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Web Development and Design Company">
-    <meta name="keywords" content="Web Development, Web Design, Web Content Creation">
+    <meta name="description" content="ZoeVerse is a leading web development and design company offering innovative solutions for your business.">
+    <meta name="keywords" content="Web Development, Web Design, ZoeVerse, Software Development, Digital Solutions, Web Content Creation">
     <meta name="google-site-verification" content="vjEu2xOqEkuuTbOctSnQlPWXVYQLwt13X7QhrJrga8w" />
     <title>ZoeVerse: Web Development and Design Company</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
