--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/logo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.ico" type="image/x-icon" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="ZoeVerse is a leading web development and design company offering innovative solutions for your business.">
     <meta name="keywords" content="Web Development, Web Design, ZoeVerse, Software Development, Digital Solutions, Web Content Creation">
