--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ZoeVerse crafts responsive, modern websites tailored to your business. From sleek designs to robust functionality, we deliver web solutions that engage users and drive results.">
-    <meta name="keywords" content="Web Development, Web Design, ZoeVerse, Software Development, Digital Solutions, Web Content Creation">
+    <meta name="description" content="From expert web development and design to educational training for colleges and corporates — we deliver  seamless  websites and empower teams  with future-ready digital skills">
+    <meta name="keywords" content="Web Development, Web Design, ZoeVerse, Software Development, Digital Solutions, Web Content Creation , Software training , Web Development training , Full Stack Web Development, Full Stack with GenAI">
     <meta name="google-site-verification" content="vjEu2xOqEkuuTbOctSnQlPWXVYQLwt13X7QhrJrga8w" />
-    <title>ZoeVerse | Custom Web Development & Design Solutions</title>
+    <title>ZoeVerse | Web Development Training | Development & Design Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
